--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
 
 <body>
     <div class="form" id="form">
-        <h2>Có yêu anh không nè ?</h2>
-        <input type="button" value="Có Nè" id="have">
-        <input type="button" value="Không nha" id="nothing">
+        <h2>Làm người yêu anh nhé ?</h2>
+        <input type="button" value="Đồng ý" id="have">
+        <input type="button" value="Không đồng ý" id="nothing">
     </div>
     <div class="image" id="image">
         <img src="haha.jpg" alt="pika haha">
